@@ -1,21 +1,21 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '2.2.0'
-    id 'com.github.ben-manes.versions' version '0.51.0'
+    id 'org.jetbrains.kotlin.jvm' version '2.3.20'
+    id 'com.github.ben-manes.versions' version '0.53.0'
     id 'application'
 }
 
 group = 'co.itstom'
-version = '2025.1'
+version = '2026.1'
 
 repositories {
     mavenCentral()
 }
 
 def ktormVersion = '4.1.1'
-def log4jVersion = '2.25.2'
+def log4jVersion = '2.25.4'
 
 kotlin {
-    jvmToolchain(21)
+    jvmToolchain(25)
 }
 
 dependencies {
@@ -24,12 +24,12 @@ dependencies {
 
     implementation "org.ktorm:ktorm-core:${ktormVersion}"
     implementation "org.ktorm:ktorm-support-sqlite:${ktormVersion}"
-    implementation "org.xerial:sqlite-jdbc:3.51.1.0"
+    implementation "org.xerial:sqlite-jdbc:3.51.3.0"
 
     implementation "org.apache.logging.log4j:log4j-api:${log4jVersion}"
     implementation "org.apache.logging.log4j:log4j-core:${log4jVersion}"
     implementation "org.apache.logging.log4j:log4j-slf4j2-impl:${log4jVersion}"
-    implementation "com.lmax:disruptor:3.4.4"
+    implementation "com.lmax:disruptor:4.0.0"
 
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
     testImplementation 'org.jetbrains.kotlin:kotlin-test-junit'
@@ -37,4 +37,9 @@ dependencies {
 
 application {
     mainClass = 'co.itstom.sqlite.MainKt'
+}
+
+// silence a Java 21 native-access warning coming from the SQLite JDBC driver
+tasks.withType(JavaExec).configureEach {
+    jvmArgs '--enable-native-access=ALL-UNNAMED'
 }
